# ai_service

./: .env  README.md  pyproject.toml
files/: new_big.docx  old_big.docx
src/app/: cli.py
src/app/agents/: conclusion_agent.py  research_agent.py  revision_check_agent.py
src/app/clients/: polza_client.py
src/app/core/: compare_service.py  risk_heuristics.py  settings.py  text_normalize.py
src/app/diffing/: git_like_diff.py  models.py  points.py
src/app/extractors/: base.py  docx_pdf_extractor.py  tika_extractor.py
tests/: conftest.py  test_diff_hunks.py  test_normalize.py  test_orchestrator.py  test_points_merge.py
